--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,6 @@ version = "0.1.0"
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 OpenJpeg_jll = "643b3616-a352-519d-856d-80112ee9badc"
+
+[compat]
+CEnum = "0.4"
