--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 OpenJpeg_jll = "643b3616-a352-519d-856d-80112ee9badc"
+libopenjpegextra_jll = "45948f9d-8d54-5094-b7bd-7e0ca68150a5"
