--- a/gen/Project.toml
+++ b/gen/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
 OpenJpeg_jll = "643b3616-a352-519d-856d-80112ee9badc"
+libopenjpegextra_jll = "45948f9d-8d54-5094-b7bd-7e0ca68150a5"
