--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,8 @@ version = "0.1.0"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
+ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
+FixedPointNumbers = "53c48c17-4a7d-5ca2-90c5-79b7896eea93"
+ImageBase = "c817782e-172a-44cc-b673-b171935fbb9e"
 OpenJpeg_jll = "643b3616-a352-519d-856d-80112ee9badc"
 libopenjpegextra_jll = "45948f9d-8d54-5094-b7bd-7e0ca68150a5"
